compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0009_choose_bool.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0009_choose_bool.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
true
stderr:
<empty>
