compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0010_choose_char.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0010_choose_char.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
a
stderr:
<empty>
