compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0011_choose_int.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0011_choose_int.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
0
stderr:
<empty>
