compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0012_choose_string.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0012_choose_string.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
left
stderr:
<empty>
