compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0014_const_bool_false.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0014_const_bool_false.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
false
stderr:
<empty>
