compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0018_const_float_one.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0018_const_float_one.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
1.5
stderr:
<empty>
