compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0046_identity_nested_tuple.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0046_identity_nested_tuple.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
((0, 1), true)
stderr:
<empty>
