compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0080_duplicate_tuple.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0080_duplicate_tuple.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
((0, x), (0, x))
stderr:
<empty>
